# text-editor

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: colors.rs  config.rs  editor.rs  events.rs  insert_map.rs  insert_set.rs  ivec2.rs  keybinds.rs  main.rs  preferences.rs  to.rs  utf8.rs  utils.rs
src/actions/: cursor.rs  editor.rs  file.rs  mod.rs  typing.rs  view.rs
src/ansi/: clear.rs  color.rs  cursor.rs  mod.rs  state.rs
src/config/: keybinds.rs  mod.rs  preferences.rs  theme.rs
src/utils/: mod.rs  to_with.rs  utf8.rs  word.rs
src/view/: browsing.rs  files.rs  mod.rs
src/view/editing/: mod.rs
src/view/editing/actions/: cursor.rs  editor.rs  file.rs  mod.rs  typing.rs  view.rs
