# text-editor/Cargo.toml

[package]
publish      = false

name         = "text-editor"
version      = "0.0.0"

edition      = "2024"
rust-version = "1.88.0"

authors      = ["mochou-p"]
description  = "simple text-based text editor"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/text-editor"

keywords     = ["editor", "text", "text-editor", "text-based"]
categories   = ["text-editors", "command-line-utilities", "development-tools", "filesystem"]

[dependencies]
libc = "0.2.172"

[lints.clippy]
all      = "warn"
pedantic = "warn"
nursery  = "warn"
cargo    = "forbid"

