# text-editor/Cargo.toml

[package]
publish      = false
name         = "text-editor"
version      = "0.0.0"
edition      = "2024"
rust-version = "1.92.0"
authors      = ["mochou-p"]
description  = "a based text-based text editor"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/text-editor"
keywords     = ["editor", "text", "text-editor", "text-based"]
categories   = ["text-editors", "command-line-utilities", "development-tools", "filesystem"]

[dependencies]
termion = "4.0.5"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# -pedantic:
needless_pass_by_value = "allow"

